[tool.poetry]
name = "pydantic-playground"
version = "0.1.0"
description = ""
authors = ["Hank Ehly <henry.ehly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.1.1"

[tool.poetry.dev-dependencies]
jupyterlab = "^1.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
